# layeredrl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: .gitignore  README.md  requirements.txt
docs/source/: citation.rst  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  quickstart.rst
examples/: blackbox_planning.py  dads_hierarchy.py  ensemble_rollout.py  planning_with_model.py  splates_hierarchy.py  tdmpc2_hierarchy.py
layeredrl/: __init__.py
layeredrl/aux_rewards/: __init__.py  ensemble_disagreement.py
layeredrl/collectors/: __init__.py  collector.py
layeredrl/envs/: __init__.py  affine_rew_wrapper.py  ant_flipped_wrapper.py  log_rew_wrapper.py  maze2d.py
layeredrl/funcs/: reward_funcs.py
layeredrl/hierarchies/: __init__.py  flat_tianshou_hierarchy.py  hierarchy.py  random_hierarchy.py
layeredrl/levels/: __init__.py  action_sequence_level.py  constant_level.py  dads_level.py  level.py  planner_level.py  random_level.py  splates_level.py  tdmpc2_level.py  tianshou_level.py
layeredrl/models/: __init__.py  model.py  probabilistic_ensemble.py
layeredrl/nets/: __init__.py  concat_net.py  critic.py  encoder.py  encoder_net.py  fixed_encoder_net.py  identity_encoder.py  prob_fc_dynamics.py  random_dynamics.py  reward_net.py  value_net.py
layeredrl/optimizers/: __init__.py  cem.py  icem.py  (+1 more)
tests/: tdmpc2.yaml  test_collector.py  test_flat_learning.py  test_hierarchies.py  test_levels.py  test_maze2d.py  test_model_learning.py  test_optimizers.py  test_predictors.py
(+52 files in other folders)
